payment-dep-service/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  labels:
    app: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: 923975749308.dkr.ecr.ap-northeast-1.amazonaws.com/payment-service:IMAGE
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    app: payment-service
  # annotations:
  #   alb.ingress.kubernetes.io/healthcheck-path: /stage
  #   alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  selector:
    app: payment-service
  ports:
    - port: 8080
      targetPort: 8080
