payment-dep-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: file-ingress-1
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    alb.ingress.kubernetes.io/load-balancer-name: project-lb-1
spec:
  rules:
  - host: project-lb-395642569.ap-northeast-1.elb.amazonaws.com
    http:
      paths:
        - path: /stage
          backend:
            serviceName: payment-service
            servicePort: 8080
